persons: add handler update some fields person information
